src/test/ui/issues/issue-47715.stderr
error[E0562]: `impl Trait` not allowed outside of function and inherent method return types
  --> $DIR/issue-47715.rs:9:37
   |
LL | struct Container<T: Iterable<Item = impl Foo>> {
   |                                     ^^^^^^^^

error[E0562]: `impl Trait` not allowed outside of function and inherent method return types
  --> $DIR/issue-47715.rs:14:30
   |
LL | enum Enum<T: Iterable<Item = impl Foo>> {
   |                              ^^^^^^^^

error[E0562]: `impl Trait` not allowed outside of function and inherent method return types
  --> $DIR/issue-47715.rs:19:32
   |
LL | union Union<T: Iterable<Item = impl Foo> + Copy> {
   |                                ^^^^^^^^

error[E0562]: `impl Trait` not allowed outside of function and inherent method return types
  --> $DIR/issue-47715.rs:24:30
   |
LL | type Type<T: Iterable<Item = impl Foo>> = T;
   |                              ^^^^^^^^

error[E0091]: type parameter `T` is unused
  --> $DIR/issue-47715.rs:24:11
   |
LL | type Type<T: Iterable<Item = impl Foo>> = T;
   |           ^ unused type parameter

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0091, E0562.
For more information about an error, try `rustc --explain E0091`.
